<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Visor OS</string>
    <string name="button_color_description">change contrast mode</string>
    <string name="button_zoom_description">change magnification level</string>
    <string name="button_flash_description">toggle flashlight on and off</string>
    <string name="button_pause_description">freezes the current camera image</string>
    <string name="text_autofocus_enabled">Autofocus enabled.</string>
    <string name="text_autofocus_disabled">Autofocus disabled. Tap to focus.</string>
    <string name="text_image_stored">Image stored in path </string>

    <!-- Key names (equal in all languages) -->
    <string name="key_preference_zoom_level" translatable="false">VisorAndroidKeyPreferenceZoomLevel</string>
    <string name="key_preference_color_mode" translatable="false">VisorAndroidKeyPreferenceColorMode</string>
    <string name="key_preference_autofocus_mode" translatable="false">VisorAndroidKeyPreferenceAutofocusMode</string>
    <string name="key_preference_activity_button_mode" translatable="false">VisorAndroidKeyPreferenceButtonMode</string>
    <string name="key_preference_autofocus_sound" translatable="false">VisorAndroidKeyPreferenceAutoFocusSound</string>
    <string name="key_preference_shutter_sound" translatable="false">VisorAndroidKeyPreferenceShutterSound</string>
    <string name="key_preference_max_brightness" translatable="false">VisorAndroidKeyPreferenceMaxBrightness</string>
    <string name="key_preference_auto_torch" translatable="false">VisorAndroidKeyPreferenceAutoTorch</string>
    <string name="key_preference_preview_resolution" translatable="false">VisorAndroidKeyPreferencePreviewResolution</string>
    <string name="key_preference_camera_id" translatable="false">VisorAndroidKeyPreferenceCameraId</string>/>


    <!-- Preference Titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="lighting_header">Lighting</string>
    <string name="notification_sounds_header">Notification sounds</string>

    <!-- Notification Sound Preferences -->
    <string name="focus_sound_title">After autofocus</string>
    <string name="shutter_sound_title">On screenshot</string>

    <!-- Lighting Preferences -->
    <string name="max_brightness_title">Maximum display brightness</string>
    <string name="auto_torch_title">Turn on flashlight on start</string>

    <!-- Advanced Preferences -->
    <string name="advanced_header">Advanced</string>
    <string name="preview_resolution_width">Preview resolution width</string>
    <string name="camera_id">Camera</string>
    <string name="main_camera">Main camera</string>
    <string name="selfie_camera">Selfie camera</string>
    <string name="wide_or_other_camera">Wide or other</string>
</resources>
